WikiaMobile: content overlaps ad (BugId: 20588)
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@47654 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/extensions/wikia/WikiaMobile/css/ad.scss
+++ b/extensions/wikia/WikiaMobile/css/ad.scss
@@ -1,3 +1,5 @@
+@import 'variables.scss';
+
 #wkAdPlc {
 	-webkit-tap-highlight-color: rgba( 0,0,0,0 );
 	-webkit-focus-ring-color: rgba( 0,0,0,0 );
@@ -8,7 +10,7 @@
 	margin: 0;
 	padding: 0;
 	background-color: rgba(0,0,0,.6);
-	z-index: 1;
+	z-index: $top-layer-z-index;
 	
 	*:nth-last-child(n+2) {
 		width: 320px;
